<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">麻烦你了!</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">用户名格式不对</string>
    <string name="invalid_password">密码格式不正确</string>
    <string name="login_failed">"Login failed"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="wrapper_photo_view">Jump to random position smoothly</string>
    <string name="start_now">Get to start </string>
    <string name="guide">guide</string>
    <string name="normal">NORMAL</string>
    <string name="smooth">SMOOTH</string>
    <string name="login">login</string>
    <string name="image_description">image description</string>
    <string name="tab1">Home</string>
    <string name="tab2">Page</string>
    <string name="tab3">Indicator</string>
    <string name="tab4">Others</string>
    <string name="text_page_style">Page Style:</string>
    <string name="text_indicator_style">Indicator Style:</string>
    <string name="custom_style">Custom Style</string>
    <string name="text_slide_mode">Indicator Slide Mode</string>
    <string name="pager_indicator">About ViewPagerIndicator</string>
    <string name="qq_group">60902509</string>
    <string name="about_banner">About BannerViewPager</string>
    <string name="indicator_name">ViewPagerIndicator</string>
    <string name="email">zhpanvip@outlook.com</string>
    <string name="add_data">Add Data</string>
    <string name="remove_item">Remove Item</string>
    <string name="insert_item">Insert Item</string>
    <string name="forgot">Forgot password?</string>


    <string name="connect_error">网络连接失败,请检查网络</string>
    <string name="connect_timeout">连接超时,请稍后再试</string>
    <string name="bad_network">服务器异常</string>
    <string name="parse_error">解析服务器响应数据失败</string>
    <string name="unknown_error">未知错误</string>
    <string name="response_return_error">服务器返回数据失败</string>

    <string name="request_error">Failed to request server,error code：</string>
    <string name="parameters_exception">Parameter exception</string>
    <string name="verify_code_error">输入验证码有误</string>
    <string name="verify_code_expired">验证码已过期</string>
    <string name="not_register">该账户还未注册</string>
    <string name="wrong_pwd_username">用户名或密码错误</string>
    <string name="user_registered">该账户已存在</string>
    <string name="wrong_password">密码错误</string>
    <string name="remote_login">您的账号已在其它设备上登录，如非本人操作，请及时修改密码！</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>
